Upgrade java version